--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -199,8 +199,10 @@ body.dark-theme {
 .nav__logo i{
     font-size: 1.25rem;
  }
+
+ /*Navigation for mobile devices*/
 @media screen and (max-width: 1150px){
-  .nav_menu{
+  .nav__menu{
     position: fixed;
     bottom: 0;
     left: 0;
@@ -231,7 +233,7 @@ body.dark-theme {
 }
 .nav__actions{
     display: flex;
-    align-content: center;
+    align-items: center;
     column-gap: 1rem;
 }
 .nav__actions i {
@@ -297,7 +299,7 @@ body.dark-theme {
 .show-search{
   top: 0; 
 }
-/* login */
+/*=============== login ===============*/
 .login{
   position: fixed;
   top: -100%;
@@ -320,7 +322,7 @@ body.dark-theme {
 }
 
 .login__title{
-  font: var(--h2-font-size);
+  font-size: var(--h2-font-size);
 }
 
 .login__group{
@@ -341,7 +343,7 @@ body.dark-theme {
   color: var(--text-color);
 }
 .login__signup,
-.login__forget{
+.login__forgot{
   display: block;
   font-size: var(--small-font-size);
 }
@@ -352,7 +354,7 @@ body.dark-theme {
   color: var(--first-color);
   font-weight: var(--font-medium);
 }
-.login__forget{
+.login__forgot{
   color: var(--first-color);
   margin-bottom: 1.25rem;
  
@@ -380,13 +382,13 @@ body.dark-theme {
   box-shadow: 0 2px 16px hsla(0, 0%, 0%, .1);
 
 }
-/*button*/
+/*=============== Button ===============*/
 .button{
     display: inline-block;
     background-color: var(--first-color);
     color: var(--white-color);
     font-weight: var(--font-semi-bold);
-    padding: .5rem 1.5rem;
+    padding: 1rem 1.5rem;
     transition: box-shadow .4s;
 }
 
@@ -394,8 +396,26 @@ body.dark-theme {
     box-shadow: 0 4px 32px hsla(230, 72%, 32%,.4);
 }
 
+/*=============== SERVICES ===============*/
+.service__container{
+  row-gap: 3rem;
+}
+.service__card{
+  text-align: center;
+}
+.service__card i{
+  display: block;
+  font-size: 3rem;
+  color: var(--first-color);
+  margin-bottom: 1rem;
 
-/* home*/ 
+}
+.service__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: .5rem;
+} 
+
+/*=============== Home ===============*/
 .home__swiper {
     margin: initial;
 
@@ -403,7 +423,7 @@ body.dark-theme {
     padding-top: 2rem;
     row-gap:2.5rem;
 }
-.home_data{
+.home__data{
     text-align: center;
 }
 .home__title{
@@ -424,36 +444,40 @@ body.dark-theme {
 .home__article{
     scale: .8;
 }
+/* Swiper
 .swiper-slide-active,
 .swiper-slide-duplicate-activate{
   scale: 1;
-}
+}v
 
-/*featured */
+/*=============== FEATURED ===============*/
 .featured__card{
   position: relative;
   text-align: center;
-  background-color :hsl(230, 100%, 97%);
+  background-color :var(--container-color);
   padding: 2rem;
   overflow: hidden;
-  border: 2px solid  hsl(230, 50%, 90%);
+  border: 2px solid  var(--border-color);
   transition: border .4s , background-color .4s;
 
 
-}
-.featured__tittle{
-  font-size: var;
 }
 .featured__img{
   width: 150px;
   margin: 0 auto .75rem;
 
 }
+.featured__tittle{
+  font-size: var(--h2-font-size);
+  margin-bottom: .5rem;
+}
+
 .section__tittle{
   font-size:1.25rem;
   margin-bottom: .5rem;
   color: hsl(230, 70%, 16%);
 }
+
 .featured__prices{
   display: flex;
   justify-content: center;
@@ -463,25 +487,25 @@ body.dark-theme {
 
 }
 .featured__discount{
-  color: hsl(230, 70%, 16%);
+  color: var(--title-color);
 }
 .featured__price{
-  font: .813rem;
+  font-size: var(--small-font-size);
   text-decoration: line-through;
 }
 .featured__card .button{
 cursor: pointer;
-background-color:hsl(230, 62%, 56%) ;
+/*background-color:hsl(230, 62%, 56%) ;
 text-align: center;
 color: aliceblue;
 width: 100px;
 height: 40px;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-style: bold;
+font-style: bold;*/
 
 }
-.featured__action{
-  display: inline-block;
+.featured__actions{
+  display: inline-flex;
   flex-direction: column;
   row-gap: .75rem;
   position: absolute;
@@ -489,29 +513,29 @@ font-style: bold;
   right: -1.5rem;
   transition: right .4s;
 }
-.featured__action button{
+.featured__actions button{
 background: none;
 font-size: 1.25rem;
-color:rgb(76, 76, 238) ;
+color:var(--first-color);
 cursor: pointer;
-border: none;
+/*border: none;*/
 
 
 }
 
-.section__title {
+/*.section__title {
 text-align: center;
 font-size:1.5rem;
 font-family:"Montagu Slab", serif;
 margin-bottom: 2rem;
-}
+}*/
 
-.featured__card:hover .featured__action{
+.featured__card:hover .featured__actions{
 right: 2rem;
 }
-.container {
+/*.container {
 max-width: 1220px;
-margin-inline: 1.5rem;
+margin-inline: 2rem;
 
 }
 .section {
@@ -521,8 +545,23 @@ h2 {
 color: hsl(230, 70%, 16%);
 font-family:"Montagu Slab", serif;
 font-weight: 500;
-}
+}*/
 
+.swiper-button-prev::after,
+.swiper-button-next::after{
+    content: '';
+}
+.swiper-button-prev,
+.swiper-button-next{
+    width: initial;
+    height: initial;
+    background-color: hsl(230, 100%, 97%);
+    border: 2px solid hsl(230, 50%, 90%);
+    padding: .5rem;
+    font-size: 1.5rem;
+    color: hsl(230, 62%, 56%);
+    transition: border .4s background-color -4s;
+}
 
 
 
@@ -560,24 +599,8 @@ font-weight: 500;
 .discount__img-2 {
   transform: translateX(-1rem)rotate(10deg);
 }
-/*service*/
-.service__container{
-  row-gap: 3rem;
-}
-.service__card{
-  text-align: center;
-}
-.service__card i{
-  display: block;
-  font-size: 3rem;
-  color: var(--first-color);
-  margin-bottom: 1rem;
+ 
 
-}
-.service__title{
-  font-size: var(--h3-font-size);
-  margin-bottom: .5rem;
-} */
 
 /*--==================== NEW BOOKS ====================-*/
 
@@ -625,33 +648,12 @@ font-weight: 500;
   color: var(--first-color);
 }
 
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .new__swiper:nth-child(1) {
   margin-bottom: 2rem;
 }
 
 /*--==================== JOIN ====================-*/
-.join {
+.join__container{
   position: relative;
   padding-block: 3rem;
 }
@@ -695,7 +697,7 @@ font-weight: 500;
   cursor: pointer;
 }
 
-button {
+/*button {
   background-color: blue;
   color: white;
   padding: 10px 20px;
@@ -704,7 +706,7 @@ button {
 
 button:hover {
   background-color: darkblue;
-}
+}*/
 
 /*=============== TESTIMONIAL ===============*/
 .testimonial__card{
@@ -717,7 +719,7 @@ button:hover {
 
   .testimonial__img{
     width: 100px;
-    border: 50%;
+    border-radius: 50%;
     margin: 0 auto 1.5rem;
   }
 
@@ -760,8 +762,7 @@ button:hover {
 }
 
 .footer__data{
-  /* grid-template-columns: repeat(2,max-content); */
-  grid-template-columns: repeat(2,max-content);
+  grid-template-columns: repeat(2,max-content); 
   gap:3rem 2rem;
 }
 
@@ -804,6 +805,45 @@ button:hover {
   font-size: var(--small-font-size);
 }
 
+/*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(230, 16%, 85%);
+}
+
+::-webkit-scrollbar-thumb{
+  border-radius: .5rem;
+  background-color: hsl(230, 16%, 65%);
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(230, 16%, 55%);
+}
+
+/*=============== SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--container-color);
+  box-shadow: 0 2px 8px hsla(0, 0%, 0%, .1);
+  padding: 6px;
+  font-size: 1.25rem;
+  color: var(--title-color);
+  z-index: var(--z-tooltip);
+  transition: bottom .4s, transform .4s, background-color .4s;
+}
+
+.scrollup:hover{
+  transform: translateY(-.5rem);
+}
+
+
+/*Show Scroll Up*/
+.show-scroll{
+  bottom: 6rem;
+}
 
 /*for small devices */
 @media  screen and (max-width: 320px) {
@@ -813,10 +853,41 @@ button:hover {
   .nav_menu{
     padding-inline: 3rem;
   }
+
+  .discount__img-1,
+  .discount__img-2{
+    width: 140px;
+  }
+
+  .new__card{
+    flex-direction: column;
+  }
+
+  .testimonial__card{
+    padding-inline: 1rem;
+  }
+
+  .footer__data{
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
   
 }
 
 /*for medium devices */
+@media screen and (min-width: 450px){
+  .featured__card{
+    width: 290px;
+  }
+
+  .new__card{
+    width: 390px;
+  }
+
+  .testimonial__card{
+    width: 320px;
+  }
+}
 
 @media screen and (min-width: 576px){
   .search__form{
@@ -839,9 +910,19 @@ button:hover {
     width: 380px;
     margin-inline: auto;
   }
-  .home__container{
+  .home__container,
+  .discount__container{
     grid-template-columns: 420px;
     justify-content: center;
+  }
+
+  .join__form{
+    width: 328px;
+    justify-self: center;
+  }
+
+  .footer__data{
+    grid-template-columns: repeat(3,max-content);
   }
 }
 
@@ -849,17 +930,26 @@ button:hover {
   .home__container{
     grid-template-columns: 580px;
   }
-  .home_data{
+
+  .home__data{
     width: 420px;
     justify-self: center;
   }
+
   .service__container{
     grid-template-columns: repeat(3 , max-content);
     justify-content: center;
     column-gap: 5rem;
   }
 
+  .footer__container{
+    grid-template-columns: repeat(2,max-content);
+    justify-content: space-between;
+  }
+
 }
+
+/*For Large Devices */
  @media screen and (min-width: 1150px){
   .section{
     padding-block: 7rem 2rem;
@@ -877,7 +967,7 @@ button:hover {
     display: block;
   }
   
-  .nav_menu{
+  .nav__menu{
     width: initial;
     margin-inline: auto 0;
   }
@@ -885,10 +975,128 @@ button:hover {
   .nav__list{
     column-gap: 4rem;
   }
+
   .nav__link{
     font-weight:  var(--font-medium);
   } 
 
+  .dark-theme .nav__menu{
+    box-shadow: none;
+  }
+
+  .home__data{
+    width: initial;
+  }
+
+  .service__container{
+    column-gap: 10rem;
+  }
+
+  .service__card{
+    font-size: 3.5rem;
+  }
+
+  .featured__container{
+    padding-top: 2rem;
+  }
+
+  .featured__tittle{
+    font-size: var(--h3-font-size);
+  }
+
+  .discount__container{
+    grid-template-columns: 615px 500px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .discount__data{
+    order: 1;
+  }
+
+  .discount__data,
+  .discount__title{
+    text-align: initial;
+  }
+
+  .discount__description{
+    margin-bottom: 3.5rem;
+  }
+
+  .discount__img-1,
+  .discount__img-2{
+    width: 300px;
+  }
+
+  .new__container{
+    padding-top: 2rem;
+  }
+
+  .new__card{
+    padding: 1.5rem;
+  }
+
+  .new__img{
+    width: 120px;
+  }
+  .new__title{
+    font-size: var(--h3-font-size);
+  }
+
+  .join__bg{
+    object-position: 0 -5rem;
+  }
+
+  .testimonial__container{
+    padding-inline: 2rem;
+  }
+
+  .testimonial__title{
+    font-size: var(--h3-font-size);
+  }
+
+  .testimonial__description{
+    font-size: var(--normal-font-size);
+  }
+
+  .footer{
+    padding-block: 6rem 3rem;
+  }
+
+  .footer__data{
+    grid-template-columns: repeat(4,max-content);
+    column-gap: 4.5rem;
+  }
+
+  .footer__logo,
+  .footer__title{
+    font-size: var(--h2-font-size);
+    margin-bottom: 1.5rem;
+  }
+
+  .footer__links{
+    row-gap: 1rem;
+  }
+
+  .footer__social{
+    column-gap: 1.5rem;
+  }
+
+  .footer__social-link{
+    font-size: 1.5rem;
+  }
+
+  .footer__copy{
+    margin-top: 7.5rem;
+  }
+
+  .scrollup{
+    right: 3rem;
+  }
+
+  .show-scroll{
+    bottom: 3rem;
+  }
 } 
 
 @media screen and (min-width: 1220px) {
