--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -299,10 +299,11 @@ body.dark-theme {
 .show-search{
   top: 0; 
 }
+
 /*=============== login ===============*/
 .login{
   position: fixed;
-  top: -100%;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -354,15 +355,16 @@ body.dark-theme {
   color: var(--first-color);
   font-weight: var(--font-medium);
 }
-.login__forgot{
-  color: var(--first-color);
-  margin-bottom: 1.25rem;
- 
-}
+
 
 .login__button{
   width: 100%;
   cursor: pointer;
+  /* float: left;
+  margin-top: 5px; */
+  /* margin-bottom: 1.25rem;
+  padding: 1rem; */
+  
 }
 
 .login__close{
@@ -376,6 +378,69 @@ body.dark-theme {
 .show-login{
   top:0;
 }
+/* ==============sign up=========*/
+
+.sign{
+  position: fixed;
+  top:-100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: var(--z-fixed);
+  background-color: hsla(230, 12%, 96%, .6);
+  backdrop-filter: blur(16px);
+  align-items: center;
+  padding: 1.5rem;
+  text-align: center;
+  transition: top .4s;
+}
+.sign__form{
+  background-color: var(--container-color);
+  padding: 2rem 1.5rem;
+  border: 2px solid var(--border-color);
+  row-gap: 1.25rem;
+}
+
+.sign__title{
+  font-size: var(--h2-font-size);
+}
+
+.sign__group{
+  row-gap: 1.25rem;
+}
+.sign__label{
+  display : block;
+  text-align: initial;
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  margin-bottom: .25rem;
+}
+.sign__input{
+  width: 100%;
+  background-color: var(--container-color);
+  border: 2px solid var(--border-color);
+  padding: 1rem;
+  color: var(--text-color);
+}
+.sign__button{
+  width: 100%;
+  cursor: pointer;
+  /* float: right;
+  margin-top: 5px;
+  */
+} 
+
+ .sign__close{
+  position: absolute;
+  top: 2rem;
+  right:2rem;
+  font-size: 2rem;
+  color: var(--title-color);
+  cursor: pointer;
+}
+.show-sign{
+  top:0;
+} 
 
 /* add shadow header*/
 .shadow-header{
@@ -895,8 +960,13 @@ button:hover {
     width: 400px;
     justify-self: center;
   }
+  .sign__form{
+    width: 400px;
+    justify-self: center;
+  }
   .search__close,
-  .login__close{
+  .login__close,
+  .sign__close{
     width: max-content;
     top: 4rem;
     left: 0;
